--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "bugs": {
         "url": "https://github.com/iiniit/node-email-mx-checker/issues"
     },
+    "publishConfig": {
+        "access": "public"
+    },
     "homepage": "https://github.com/iiniit/node-email-mx-checker#readme",
     "devDependencies": {
         "@types/node": "^20.4.5",
